--- a/app/src/main/res/values/Style.xml
+++ b/app/src/main/res/values/Style.xml
@@ -19,4 +19,15 @@
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <!-- 추가할 스타일 1: 선택된 단계 -->
+    <style name="StepIndicatorActive">
+        <item name="android:textColor">#FF8A00</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!-- 추가할 스타일 2: 비선택된 단계 -->
+    <style name="StepIndicatorInactive">
+        <item name="android:textColor">#666666</item>
+        <item name="android:textStyle">normal</item>
+    </style>
 </resources>
